--- a/src/main/resources/Unify/mainPage.fxml
+++ b/src/main/resources/Unify/mainPage.fxml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Unify.MainPageController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Unify.MainPageController">
     <tabs>
         <Tab text="Home">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TextArea fx:id="cardanoPrice" layoutX="63.0" layoutY="99.0" prefHeight="50.0" prefWidth="234.0" text="Current Cardano Price">
-                            <font>
-                                <Font size="20.0" />
-                            </font>
-                        </TextArea>
                         <Button fx:id="refreshButton" layoutX="245.0" layoutY="249.0" mnemonicParsing="false" onAction="#refreshButtonPushed" prefHeight="59.0" prefWidth="110.0" text="Refresh">
                             <font>
                                 <Font size="23.0" />
                             </font>
                         </Button>
-                        <TextField fx:id="price" layoutX="352.0" layoutY="99.0" prefHeight="50.0" prefWidth="157.0">
-                            <font>
-                                <Font size="23.0" />
-                            </font>
-                        </TextField>
+                  <Label layoutX="87.0" layoutY="109.0" text="Current Cardano Price">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="87.0" layoutY="185.0" text="Account Total">
+                     <font>
+                        <Font size="20.0" />
+                     </font></Label>
+                  <Label fx:id="displayTotal" layoutX="322.0" layoutY="185.0" onInputMethodTextChanged="#refreshButtonPushed" text="Press Refresh Button">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="cardanoPrice" layoutX="323.0" layoutY="109.0" onInputMethodTextChanged="#refreshButtonPushed" text="Press Refresh Button">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
                     </children></AnchorPane>
             </content>
         </Tab>
@@ -62,20 +70,27 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TextArea layoutX="134.0" layoutY="51.0" prefHeight="24.0" prefWidth="333.0" text="Add the Amount of ADA You Want to Add to Your Account" />
                         <TextField fx:id="enterAmountHereTextField" layoutX="226.0" layoutY="161.0" promptText="Enter Amount Here" />
                         <Button fx:id="ADDButton" layoutX="230.0" layoutY="244.0" mnemonicParsing="false" onAction="#ADDButtonPushed" prefHeight="81.0" prefWidth="140.0" text="ADD">
                             <font>
                                 <Font size="26.0" />
                             </font>
                         </Button>
+                  <Label layoutX="91.0" layoutY="77.0" text="Add the Amount of ADA You Want to Add to Your Account">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
                     </children>
                 </AnchorPane>
             </content>
         </Tab>
       <Tab text="Ledger">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <ListView fx:id="ledgerTable" layoutX="200.0" layoutY="85.0" prefHeight="200.0" prefWidth="200.0" />
+               </children></AnchorPane>
         </content>
       </Tab>
     </tabs>
